app/catalyst-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalyst
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: catalyst
  template:
    metadata:
      labels:
        app: catalyst
    spec:
      containers:
      - image: europe-west1-docker.pkg.dev/arcfdr-test-deployment/docker-registry/arkeagcp/catalyst:latest
        name: catalyst
        ports:
        - containerPort: 8080
