app/catalyst-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalyst
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: catalyst
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirecttowar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /samplegke
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: catalyst
            port:
              number: 80
