app/catalyst-virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalyst
spec:
  hosts:
    - catalyst.onemesh.anthos.val.arkea-gcp.net
  gateways:
    - istio-ingressgateway/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /catalyst
      route:
        - destination:
            host: catalyst
