app/authorization-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-internet-and-catalyst
spec:
  selector:
    matchLabels:
      app: catalyst
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-ingressgateway", "catalyst"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/catalyst*", "/version*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-mtls
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals: ["*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-mtls
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals: ["*"]
